test/good/functions/func08.px

func f(Int x) Rat def
    return x

print f(2).fraction
