test/bad/generators/generator01.px

func f(x: Int): Int... def
    return x

f(0)
